# rust-zero2prod

./: .gitignore  Cargo.toml
migrations/: 20221106100139_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
